# Provisioning-memfault

./: CMakeLists.txt  CMakePresets.json  Kconfig  README.md  prj.conf  sample.yaml
boards/: nrf7002dk_nrf5340_cpuapp.conf  nrf7002dk_nrf5340_cpuapp.overlay
config/: memfault_metrics_heartbeat_config.def
configs/: overlay-debug.conf  overlay-memfault.conf  overlay_wifi_provisioning.conf
hci_rpmsg/: prj.conf
overlays/: x_nucleo_iks01a3_shub.overlay
src/: CMakeLists.txt  main.c
src/memfault/: CMakeLists.txt  memfault.c  memfault.h
src/wifi_provisioning/: CMakeLists.txt  wifi_prov.c  wifi_prov.h
